<resources>
    <string name="app_name">Administrador de Tareas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvid_mi_contrase_a">Olvidé mi contraseña</string>
    <string name="recordar_mi_usuario_en_este_dispositivo">Recordar mi usuario en este dispositivo</string>
    <string name="iniciar">Iniciar</string>
    <string name="no_tengo_una_cuenta">No tengo una cuenta</string>
    <string name="registrarme">Registrarme</string>
    <string name="ya_tengo_una_cuenta">Ya tengo una cuenta</string>
    <string name="crear_cuenta">Crear cuenta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="is_required">Es requerido</string>
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="btnSave">Guardar</string>
    <string name="add_photo">Agregar foto</string>
    <string name="aceptar_calendar">Aceptar</string>
    <string name="recovery_button">Recuperar</string>
    <string name="email_recovery">Correo</string>
</resources>
